--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h1 class="text-center">The Miraculous Potion Machine </h1>
+                <h1 class="text-center">Le Bar Magique </h1>
 
                 <div class="well" id="potion_well">
                     <h3 class="text-center"><span id="generated_potion"></span></h3>
@@ -53,12 +53,12 @@
                 <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Generate Potion</a></p>
                 <br>
 
-                <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
+                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
 
                 <p class="text-center">
                     <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
                     <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
-                </p>
+                </p> -->
 
                 <br>
             </div>
