creating my own potion generator

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h1 class="text-center">Le Bar Magique </h1>
+                <h1 class="text-center">Les potions magiques</h1>
 
                 <div class="well" id="potion_well">
                     <h3 class="text-center"><span id="generated_potion"></span></h3>
                 </div>
                 <br>
 
-                <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Generate Potion</a></p>
+                <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer</a></p>
                 <br>
 
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
@@ -67,9 +67,9 @@
 
 
         <footer>
-            <h3 class="text-center">
+            <!-- <h3 class="text-center">
                 <a href="https://twitter.com/potion_machine">Follow the the Miraculous Potion Machine on Twitter</a>
-            </h3>
+            </h3> -->
             <br>
             <p class="text-center">
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
