--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <script src="https://rpg.rigden.us/libs/numeral/numeral.min.js"></script>
     <script src="https://rpg.rigden.us/libs/jquery/2.2.1/jquery-2.2.1.min.js"></script>
     <script src="https://rpg.rigden.us/libs/boostrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-    <script src="potion_machine.js"></script>
+    <!-- <script src="potion_machine.js"></script> -->
+    <script src="frondlock_potion_machine.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
