--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>La Machine à Potions</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -36,10 +36,6 @@
 </head>
 
 <body>
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
@@ -53,12 +49,12 @@
                 <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer</a></p>
                 <br>
 
-                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
-
+                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>-->
+<!--  -->
                 <p class="text-center">
                     <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
                     <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
-                </p> -->
+                </p>
 
                 <br>
             </div>
