adding the libs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="https://rpg.rigden.us/libs/font_awesome/4.5.0/css/font-awesome.min.css">
-    <link href="https://rpg.rigden.us/libs/boostrap/3.3.6/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font_awesome/4.5.0/css/font-awesome.min.css">
+    <link href="libs/bootstrap.min.css" rel="stylesheet">
     <style>
         #potion_well {
             height: 260px;
@@ -49,8 +49,7 @@
                 <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer</a></p>
                 <br>
 
-                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>-->
-<!--  -->
+                <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
                 <p class="text-center">
                     <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
                     <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
@@ -81,9 +80,9 @@
         </footer>
     </div>
 
-    <script src="https://rpg.rigden.us/libs/numeral/numeral.min.js"></script>
-    <script src="https://rpg.rigden.us/libs/jquery/2.2.1/jquery-2.2.1.min.js"></script>
-    <script src="https://rpg.rigden.us/libs/boostrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <script src="libs/numeral.min.js"></script>
+    <script src="libs/jquery-2.2.1.min.js"></script>
+    <script src="libs/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
     <!-- <script src="potion_machine.js"></script> -->
     <script src="frondlock_potion_machine.js"></script>
     <script>
