ajout des valeurs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 </div>
                 <br>
 
-                <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer</a></p>
+                <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a></p>
+                
+
                 <br>
 
                 <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
