--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="libs/font_awesome/4.5.0/css/font-awesome.min.css">
-    <link href="libs/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="libs/css/font-awesome.min.css">
+    <link href="libs/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #potion_well {
             height: 260px;
@@ -47,11 +47,11 @@
                 <br>
 
                 <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a></p>
-                
+
 
                 <br>
 
-                <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p>
+                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
                 <p class="text-center">
                     <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
                     <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
@@ -71,13 +71,12 @@
             <p class="text-center">
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                 <br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Mr. Rigden's RPG Tools</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="rpg.jasonrigden.com" property="cc:attributionName" rel="cc:attributionURL">Jason Rigden</a>                is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-                <br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://rpg.rigden.us/" rel="dct:source">rpg.jasonrigden.com</a>.
+                <br />Basé sur le travail de <a target="_blank" xmlns:dct="http://purl.org/dc/terms/" href="https://rpg.rigden.us/" rel="dct:source">rpg.jasonrigden.com</a>.
             </p>
             <p class="text-center">
-                Follow Mr. Rigden<br>
-                <a href="https://twitter.com/mr_rigden"><i class="fa fa-twitter fa-2x"></i></a>
-                <a href="https://github.com/jrigden"><i class="fa fa-github fa-2x"></i></a>
-                <a href="https://www.facebook.com/jason.rigden"><i class="fa fa-facebook-official fa-2x"></i></a>
+                Follow Julianoe<br>
+                <a href="https://twitter.com/Julianoe_"><i class="fa fa-twitter fa-2x"></i></a>
+                <a href="https://github.com/julianoe"><i class="fa fa-github fa-2x"></i></a>
             </p>
         </footer>
     </div>
