adding cool button design and fonts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="libs/css/font-awesome.min.css">
     <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <style>
         #potion_well {
             height: 260px;
@@ -46,7 +47,11 @@
                 </div>
                 <br>
 
-                <p class="text-center"><a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a></p>
+                <p class="text-center">
+                  <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
+                  
+                  <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
+                </p>
 
 
                 <br>
