--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <p class="text-center">
                   <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
-                  
+
                   <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
                 </p>
 
@@ -57,15 +57,11 @@
                 <br>
 
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
-                <p class="text-center">
-                    <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
-                    <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
-                </p>
+
 
                 <br>
             </div>
         </div>
-        <hr>
 
 
         <footer>
@@ -73,7 +69,14 @@
                 <a href="https://twitter.com/potion_machine">Follow the the Miraculous Potion Machine on Twitter</a>
             </h3> -->
             <br>
-            <p class="text-center">
+
+            <!-- <p class="text-center">
+                <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
+                <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
+            </p> -->
+
+
+            <!-- <p class="text-center">
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                 <br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Mr. Rigden's RPG Tools</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="rpg.jasonrigden.com" property="cc:attributionName" rel="cc:attributionURL">Jason Rigden</a>                is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
                 <br />Basé sur le travail de <a target="_blank" xmlns:dct="http://purl.org/dc/terms/" href="https://rpg.rigden.us/" rel="dct:source">rpg.jasonrigden.com</a>.
@@ -82,7 +85,7 @@
                 Follow Julianoe<br>
                 <a href="https://twitter.com/Julianoe_"><i class="fa fa-twitter fa-2x"></i></a>
                 <a href="https://github.com/julianoe"><i class="fa fa-github fa-2x"></i></a>
-            </p>
+            </p> -->
         </footer>
     </div>
 
