--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-5">
                 <h1 class="text-center">Les potions magiques</h1>
 
                 <div class="well" id="potion_well">
@@ -48,6 +48,7 @@
                 <br>
 
                 <p class="text-center">
+
                   <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
 
                   <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
@@ -61,6 +62,9 @@
 
                 <br>
             </div>
+            <div class="col-md-6">
+            </div>
+
         </div>
 
 
