changing main title

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <h1 class="text-center">Les potions magiques</h1>
+                <h1 class="text-center" style="text-transform:uppercase;">Le Grimoire à Potions</h1>
 
                 <div class="well" id="potion_well">
                     <h3 class="text-center"><span id="generated_potion"></span></h3>
