adding images and working blend mode

--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
             top: 50%;
             transform: translateY(-50%);
         }
-
-
-
-
     </style>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <h1 class="text-center" style="text-transform:uppercase;">Le Grimoire à Potions</h1>
 
                 <div class="well" id="potion_well">
@@ -48,21 +44,25 @@
                 <br>
 
                 <p class="text-center">
-
                   <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
-
                   <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
                 </p>
-
-
                 <br>
-
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
-
-
                 <br>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-1">
+            </div>
+
+            <div class="col-md-5">
+              <ul>
+                <li><span id="puissance_potion">Puissance</span></li>
+                <li><span id="duree_potion">Durée</span></li>
+                <li><span id="effet_potion">Effet</span></li>
+
+              </ul>
+              <div class="bg-blend"></div>
+              <!-- <img class="image-skull bg-blend" src="img/skull2.jpg"> -->
             </div>
 
         </div>
