making the value of effect concording with the puissance

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <h1 class="text-center" style="text-transform:uppercase;">Le Grimoire à Potions</h1>
 
                 <div class="well" id="potion_well">
-                    <h3 class="text-center"><span id="generated_potion"></span></h3>
+                    <h4 class="text-center"><span id="generated_potion"></span></h4>
                 </div>
                 <br>
 
@@ -51,16 +51,17 @@
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
                 <br>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-2">
             </div>
 
             <div class="col-md-5">
-              <ul>
-                <li><span id="puissance_potion">Puissance</span></li>
-                <li><span id="duree_potion">Durée</span></li>
-                <li><span id="effet_potion">Effet</span></li>
+              <!-- <h3><span style="text-transform:capitalize;" id="nom_potion"></span></h3> -->
+              <!-- <ul>
+                <li>Puissance : <span id="puissance_potion"></span></li>
+                <li>Durée : <span id="duree_potion"></span></li>
+                <li>Effet : <span id="effet_potion"></span></li>
 
-              </ul>
+              </ul> -->
               <div class="bg-blend"></div>
               <!-- <img class="image-skull bg-blend" src="img/skull2.jpg"> -->
             </div>
