--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                 <br>
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
                 <br>
+                <form>
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox"> Check me out
+                    </label>
+                  </div>
+                </form>
             </div>
             <div class="col-md-2">
             </div>
