adding working checkboxes

--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
                 <br>
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
                 <br>
-                <form>
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> Check me out
-                    </label>
-                  </div>
-                </form>
+
+                  <span>
+
+                    <input type="checkbox" name="lecheck" id="foo">
+                    <label for="lecheck"> Activer le bonus ?</label>
+
+                  </span>
+
+
             </div>
             <div class="col-md-2">
             </div>
@@ -71,6 +73,14 @@
               </ul> -->
               <div class="bg-blend"></div>
               <!-- <img class="image-skull bg-blend" src="img/skull2.jpg"> -->
+
+              <span>
+                <input type="checkbox" name="xxx">
+              <label for="xxx">A label for xxx</label>
+              </span>
+
+
+
             </div>
 
         </div>
