adding checkboxes for bonus malus

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
                 </div>
                 <br>
 
+                <span>
+                  <input type="checkbox" name="lecheckbonus" id="check_bonus" class="checkbox" unchecked="">
+                  <label for="lecheckbonus"> Que des bonus ? </label>
+                </span>
+                <br>
+                <span>
+                  <input type="checkbox" name="lecheckmalus" id="check_malus" class="checkbox">
+                  <label for="lecheckmalus"> Que des malus ? </label>
+                </span>
+
+
                 <p class="text-center">
                   <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
                   <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
@@ -51,12 +62,6 @@
                 <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
                 <br>
 
-                  <span>
-
-                    <input type="checkbox" name="lecheck" id="foo">
-                    <label for="lecheck"> Activer le bonus ?</label>
-
-                  </span>
 
 
             </div>
@@ -73,11 +78,6 @@
               </ul> -->
               <div class="bg-blend"></div>
               <!-- <img class="image-skull bg-blend" src="img/skull2.jpg"> -->
-
-              <span>
-                <input type="checkbox" name="xxx">
-              <label for="xxx">A label for xxx</label>
-              </span>
 
 
 
@@ -113,7 +113,7 @@
 
     <script src="libs/numeral.min.js"></script>
     <script src="libs/jquery-2.2.1.min.js"></script>
-    <script src="libs/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <script src="libs/bootstrap.min.js"></script>
     <!-- <script src="potion_machine.js"></script> -->
     <script src="frondlock_potion_machine.js"></script>
     <script>
