compressed images, deleting useless ones

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
               <h3>Puissances</h3>
 
               <span>
-                <input type="checkbox" name="checkmythique" id="check_mythique" class="checkbox">
+                <input type="checkbox" name="checkmythique" id="check_mythique" class="checkbox" checked>
                 <label for="checkmythique"> Mythique </label>
               </span>
               <br>
               <span>
-                <input type="checkbox" name="checkpuissante" id="check_puissante" class="checkbox">
+                <input type="checkbox" name="checkpuissante" id="check_puissante" class="checkbox" checked>
                 <label for="checkpuissante"> Puissance </label>
               </span>
               <br>
@@ -89,12 +89,12 @@
               </span>
               <br>
               <span>
-                <input type="checkbox" name="checkintermediaire" id="check_intermediaire" class="checkbox">
+                <input type="checkbox" name="checkintermediaire" id="check_intermediaire" class="checkbox" checked>
                 <label for="checkintermediaire"> Intermédiaire </label>
               </span>
               <br>
               <span>
-                <input type="checkbox" name="checkstandard" id="check_standard" class="checkbox">
+                <input type="checkbox" name="checkstandard" id="check_standard" class="checkbox" checked>
                 <label for="checkstandard"> Standard </label>
               </span>
               <br>
