--- a/index.html
+++ b/index.html
@@ -57,20 +57,15 @@
 
                     </form>
                 <p class="text-center">
-                  <!-- <a class="btn btn-primary btn-lg" id="potion_button" href="#" role="button">Générer potion</a> -->
                   <a class="potion-button-red uglyquaregular" id="potion_button" href="#" role="button">Generer</a>
+                  <span id="potion_mode">Basic Potion Mode</span> contient <span id="potion_combinations"></span> potions
                 </p>
                 <br>
-                <!-- <p class="text-center"><a class="btn btn-primary" id="switch_mode_button" href="#" role="button"></a></p> -->
-                <br>
-
-
-
             </div>
             <div class="col-md-2">
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-3">
               <h3>Puissances</h3>
 
               <span>
@@ -107,58 +102,38 @@
                 <input type="checkbox" name="lecheckminime" id="check_minime" class="checkbox" checked>
                 <label for="checkminime"> Minime </label>
               </span>
-              <!-- <h3><span style="text-transform:capitalize;" id="nom_potion"></span></h3> -->
-              <!-- <ul>
-                <li>Puissance : <span id="puissance_potion"></span></li>
-                <li>Durée : <span id="duree_potion"></span></li>
-                <li>Effet : <span id="effet_potion"></span></li>
-
-              </ul> -->
-
-              <!-- <form name="myform" action="http://www.mydomain.com/myformhandler.cgi" method="POST"> -->
-              <!-- <input type="radio" name="group1" value="Toutes"> Toutes<br>
-              <input type="radio" name="group1" value="Mythique"> Mythique<br>
-              <input type="radio" name="group1" value="Butter" checked> Butter<br>
-              <input type="radio" name="group1" value="Cheese"> Cheese -->
-              <!-- </form> -->
-              <!-- <img class="image-skull bg-blend" src="img/skull2.jpg"> -->
-
-
-
             </div>
+
+
+              <div class="col-md-2">
+
+                <footer style="opacity:0.5;">
+                    <br>
+                    <p class="text-center">
+                        <!--<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                        <br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Mr. Rigden's RPG Tools</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="rpg.jasonrigden.com" property="cc:attributionName" rel="cc:attributionURL">Jason Rigden</a>                is licensed under a .-->
+                        <br />Basé sur le travail de <a target="_blank" xmlns:dct="http://purl.org/dc/terms/" href="https://rpg.rigden.us/" rel="dct:source">Jason Rigden</a> (<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>) pour le générateur.
+                        Merci à <a target="_blank" href="http://opengameart.org/users/lamoot"> Lamoot</a> et <a href="http://opengameart.org/users/stumpystrust" blank="_blank">StumpuStrust</a> pour les boutons.
+                    </p>
+                    <p class="text-center">
+
+                        <a href="https://twitter.com/Julianoe_">Follow Julianoe</a> -
+                        <a href="https://github.com/julianoe">Voir le code source</a>
+                    </p>
+                </footer>
+              </div>
+
+
 
         </div>
 
 
-        <footer>
-            <!-- <h3 class="text-center">
-                <a href="https://twitter.com/potion_machine">Follow the the Miraculous Potion Machine on Twitter</a>
-            </h3> -->
-            <br>
 
-            <!-- <p class="text-center">
-                <span id="potion_mode">Basic Potion Mode</span> With <span id="potion_combinations"></span> combinations
-                <br>This machine has been made with the <a href="https://github.com/jrigden/seeds_of_infinity">seeds_of_infinity</a>
-            </p> -->
-
-
-            <!-- <p class="text-center">
-                <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
-                <br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Mr. Rigden's RPG Tools</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="rpg.jasonrigden.com" property="cc:attributionName" rel="cc:attributionURL">Jason Rigden</a>                is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-                <br />Basé sur le travail de <a target="_blank" xmlns:dct="http://purl.org/dc/terms/" href="https://rpg.rigden.us/" rel="dct:source">rpg.jasonrigden.com</a>.
-            </p>
-            <p class="text-center">
-                Follow Julianoe<br>
-                <a href="https://twitter.com/Julianoe_"><i class="fa fa-twitter fa-2x"></i></a>
-                <a href="https://github.com/julianoe"><i class="fa fa-github fa-2x"></i></a>
-            </p> -->
-        </footer>
     </div>
 
     <script src="libs/numeral.min.js"></script>
     <script src="libs/jquery-2.2.1.min.js"></script>
     <script src="libs/bootstrap.min.js"></script>
-    <!-- <script src="potion_machine.js"></script> -->
     <script src="frondlock_potion_machine.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
