changing title tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>La Machine à Potions</title>
+    <title>La Grimoire à Potions</title>
     <meta name="description" content="Une machine à générer des potions. Parfaite pour les rôlistes en mal d'inspiration.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
