adding og type meta

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     <title>Le Grimoire à Potions</title>
     <meta name="description" content="Une machine à générer des potions. Parfaite pour les rôlistes en mal d'inspiration.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title" content="Le Grimoire à Potions" />
+    <meta property="og:url" content="http://jdr.geeks-curiosity.net/grimoire/" />
+    <meta property="og:image" content="http://jdr.geeks-curiosity.net/grimoire/screen.jpg" />
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="libs/css/font-awesome.min.css">
     <link href="libs/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+
+
+
+
     <style>
         #potion_well {
             height: 175px;
